feat/admin, implementação do modulo administrador e suas validações e autenticações.
