# src/server.js
@@ -6,6 +6,7 @@ import swaggerUi from "swagger-ui-express";
 import swaggerJsDoc from "../swagger.json" assert { type: "json" };
 import authRouter from "./auth/auth.router.js";
 import userRouter from "./users/user.router.js";
+import adminRouter from "./admin/admin.router.js";
 
 const app = express();
 
@@ -14,6 +15,7 @@ app.use(cors());
 app.use(express.urlencoded({ extended: true }));
 app.use("/", authRouter);
 app.use("/users", userRouter);
+app.use('/admin', adminRouter)
 app.use("/api", swaggerUi.serve, swaggerUi.setup(swaggerJsDoc));
 
 mongoConfig();
