# swagger.json
@@ -11,19 +11,28 @@
   },
   "tags": [
     {
-      "name": "auth"
+      "name": "auth",
+      "description": "Authentication and authorization routes"
     },
     {
-      "name": "users"
+      "name": "users",
+      "description": "User routes"
     },
     {
-      "name": "products"
+      "name": "products",
+      "description": "Product routes"
     },
     {
-      "name": "carts"
+      "name": "carts",
+      "description": "Cart routes"
     },
     {
-      "name": "orders"
+      "name": "orders",
+      "description": "Order routes"
+    },
+    {
+      "name": "admin",
+      "description": "Admin routes"
     }
   ],
   "paths": {
@@ -128,6 +137,12 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Invalid credentials"
+          },
+          "500": {
+            "description": "Internal server error"
           }
         }
       }
@@ -135,6 +150,11 @@
     "/users": {
       "get": {
         "tags": ["users"],
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
         "summary": "Get all users",
         "responses": {
           "200": {
@@ -157,6 +177,11 @@
       "get": {
         "tags": ["users"],
         "summary": "Get a user",
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
         "parameters": [
           {
             "name": "id",
@@ -184,6 +209,11 @@
       "put": {
         "tags": ["users"],
         "summary": "Update a user",
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
         "parameters": [
           {
             "name": "id",
@@ -211,6 +241,11 @@
       "delete": {
         "tags": ["users"],
         "summary": "Delete a user",
+        "security": [
+          {
+            "jwt": []
+          }
+        ],
         "parameters": [
           {
             "name": "id",
@@ -225,6 +260,108 @@
         "responses": {
           "200": {
             "description": "User deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/admin/login": {
+      "post": {
+        "tags": ["admin"],
+        "summary": "Login as an admin",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "example": "QpZpY@example.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "example": "password123"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Admin logged successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "access_token": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/admin/register": {
+      "post": {
+        "tags": ["admin"],
+        "summary": "Register as an admin",
+        "responses": {
+          "201": {
+            "description": "Admin created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string"
+                    },
+                    "email": {
+                      "type": "string"
+                    },
+                    "password": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "example": "John Doe"
+                  },
+                  "email": {
+                    "type": "string",
+                    "example": "QpZpY@example.com"
+                  },
+                  "password": {
+                    "type": "string",
+                    "example": "password123"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -248,6 +385,13 @@
             "type": "string"
           }
         }
+      }
+    },
+    "securitySchemes": {
+      "jwt": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   }
